Fix: Override max-width style to resolve homepage layout issue.
Screenshot: https://storage.googleapis.com/screenshot-production-us-central1/4106dc7c-280d-4d11-8b07-5a9e2a9d55f4/15b9ae4f-d607-46c0-b0ef-d0fd51573df4.jpg

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,6 +19,6 @@
 
   .container {
     @apply px-[var(--layout-horizontal-padding)] py-[var(--layout-vertical-padding)] mx-auto;
-    max-width: var(--layout-max-width);
+    max-width: var(--layout-max-width) !important;
   }
 }
